--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "[AWS] Send payload to SNS retry topic based on configured codes",
   "main": "index.js",
   "scripts": {
-    "test": "nodeunit tests"
+    "test": "nodeunit test",
+    "coveralls": "jscoverage lib && YOURPACKAGE_COVERAGE=1 nodeunit --reporter=lcov test | coveralls"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,8 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "coveralls": "^2.13.1",
+    "jscoverage": "^0.6.0",
     "nodeunit": "^0.11.1"
   }
 }
