--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: node_js
 node_js:
-- "4"
+  - "4.1"
+  - "4.0"
+install:
+  - npm install
 after_script:
-  - npm run coveralls
+  - npm run codecov
