--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "nodeunit test",
-    "coveralls": "jscoverage lib && YOURPACKAGE_COVERAGE=1 nodeunit --reporter=lcov test | coveralls"
+    "codecov": "istanbul cover node_modules/nodeunit/bin/nodeunit test && codecov"
   },
   "repository": {
     "type": "git",
@@ -28,8 +28,9 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "codecov": "^2.3.1",
     "coveralls": "^2.13.1",
-    "jscoverage": "^0.6.0",
+    "istanbul": "^0.4.5",
     "nodeunit": "^0.11.1"
   }
 }
